# aoc

./: .gitignore  Cargo.toml  README.md  bacon.toml
2019/day1/: Cargo.toml
2019/day10/: Cargo.toml
2019/day11/: Cargo.toml
2019/day12/: Cargo.toml
2019/day13/: Cargo.toml
2019/day14/: Cargo.toml
2019/day15/: Cargo.toml
2019/day16/: Cargo.toml
2019/day17/: Cargo.toml
2019/day18/: Cargo.toml
2019/day19/: Cargo.toml
2019/day2/: Cargo.toml  something.txt
2019/day22/: Cargo.toml
2019/day3/: Cargo.toml
2019/day4/: Cargo.toml
2019/day5/: Cargo.toml
2019/day6/: Cargo.toml
2019/day7/: Cargo.toml
2019/day8/: Cargo.toml
2019/day9/: Cargo.toml
2020/day1/: Cargo.toml
2020/day10/: Cargo.toml
2020/day11/: Cargo.toml
2020/day12/: Cargo.toml
2020/day13/: Cargo.toml
2020/day14/: Cargo.toml
2020/day15/: Cargo.toml
2020/day16/: Cargo.toml
2020/day17/: Cargo.toml
2020/day18/: Cargo.toml
2020/day19/: Cargo.toml  build.rs
2020/day19/src/: main.rs
2020/day2/: Cargo.toml
2020/day20/: Cargo.toml
2020/day21/: Cargo.toml
2020/day22/: Cargo.toml
2020/day23/: Cargo.toml
2020/day24/: Cargo.toml
2020/day25/: Cargo.toml
2020/day3/: Cargo.toml
2020/day4/: Cargo.toml
2020/day5/: Cargo.toml
2020/day6/: Cargo.toml
2020/day7/: Cargo.toml
2020/day8/: Cargo.toml
2020/day9/: Cargo.toml
2022/day1/: Cargo.toml
2022/day10/: Cargo.toml
2022/day11/: Cargo.toml
2022/day12/: Cargo.toml
2022/day13/: Cargo.toml
2022/day14/: Cargo.toml
2022/day15/: Cargo.toml
2022/day18/: Cargo.toml
2022/day2/: Cargo.toml
2022/day3/: Cargo.toml
2022/day4/: Cargo.toml
2022/day5/: Cargo.toml
2022/day6/: Cargo.toml
2022/day7/: Cargo.toml
2022/day8/: Cargo.toml
2022/day9/: Cargo.toml
2023/day1/: Cargo.toml
2023/day2/: Cargo.toml
2023/day3/: Cargo.toml
2023/day4/: Cargo.toml
2023/day5/: Cargo.toml
2023/day6/: Cargo.toml
2023/day7/: Cargo.toml  processed.txt
2023/day8/: Cargo.toml
2023/day9/: Cargo.toml
2024/day1/: Cargo.toml
2024/day10/: Cargo.toml
2024/day11/: Cargo.toml
2024/day11-macros/: Cargo.toml
2024/day11-macros/src/: lib.rs
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day14/: Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day2/: Cargo.toml
2024/day20/: Cargo.toml
2024/day3/: Cargo.toml
2024/day4/: Cargo.toml
2024/day5/: Cargo.toml
2024/day6/: Cargo.toml
2024/day7/: Cargo.toml
2024/day8/: Cargo.toml
2024/day9/: Cargo.toml
cargo-aoc/: Cargo.toml
cargo-aoc/src/: main.rs
tools/: README.md  aoc-new-day
