[package]
name = "cargo-aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
jiff = "0.1.15"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
