[package]
name = "aoc2020day20"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
lazy_static = "1.4.0"
nom = "7.1.3"
test-case = "3.3.1"

[dev-dependencies]
nom = "7.1.3"
