[package]
name = "day4"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
lazy_static = "1.4.0"
nom = "6.0.1"
regex = "1.4.2"
test-case = "1.0.0"
