[package]
name = "aoc2020day4"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
test-case = "3.3.1"
