[package]
name = "aoc2024day11"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
test-case = "3.3.1"
day11-macros = { path = "../day11-macros" }
