[package]
name = "aoc2024day5"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
itertools = "0.13.0"
nom = "7.1.3"
test-case = "3.3.1"
