[package]
name = "aoc2024day6"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = "2.2.5"
ndarray = "0.16.1"
test-case = "3.3.1"
