[package]
name = "aoc2024day7"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
strum = { version = "0.26.3", features = ["derive"] }
test-case = "3.3.1"
