[package]
name = "aoc2024day9"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.13"
itertools = "0.13.0"
strum = "0.26.3"
test-case = "3.3.1"
